# examples

./: LICENSE  README.md
httpbin/: README.md  app.body-embed.py  app.py  app.set-cookies-not-works.py  app.set-cookies-works.py  pyproject.toml
httpbin/httpbin/: __init__.py  client.py  dependencies.py  middleware.py  models.py
